# poranos-mcp-ainpc

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/poranos_mcp_ainpc/: __init__.py  server.py
src/poranos_mcp_ainpc/data/: prompt_authoring_lessons.md
tests/: test_smoke.py
