[project]
name = "poranos-mcp-ainpc"
version = "0.4.0"
description = "MCP server for managing Poranos AI NPC scenarios from Claude Desktop / Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "K-relations" },
]
keywords = ["mcp", "poranos", "ai-npc", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
]

[project.scripts]
poranos-mcp-ainpc = "poranos_mcp_ainpc.server:main"

[project.urls]
Repository = "https://github.com/kkoba23/poranos-mcp-ainpc"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/poranos_mcp_ainpc"]
